subdir('SettingsView')

demo_views = files([
	'AlertViewView.vala',
	'AvatarView.vala',
	'CSSView.vala',
	'DateTimePickerView.vala',
	'DynamicNotebookView.vala',
	'MessageDialogView.vala',
	'ModeButtonView.vala',
	'OverlayBarView.vala',
	'SeekBarView.vala',
	'SourceListView.vala',
	'StorageView.vala',
	'ToastView.vala',
	'WelcomeView.vala'
])
