widgets_files = files ([
	'AboutDialog.vala',
	'AbstractSettingsPage.vala',
	'AbstractSimpleSettingsPage.vala',
	'AlertView.vala',
	'AppMenu.vala',
	'Avatar.vala',
	'CellRendererBadge.vala',
	'CellRendererExpander.vala',
	'CollapsiblePaned.vala',
	'CompositedWindow.vala',
	'DatePicker.vala',
	'DynamicNotebook.vala',
	'HeaderLabel.vala',
	'MessageDialog.vala',
	'ModeButton.vala',
	'OverlayBar.vala',
	'SeekBar.vala',
	'SettingsSidebarRow.vala',
	'SettingsSidebar.vala',
	'SourceList.vala',
	'StorageBar.vala',
	'TimePicker.vala',
	'Toast.vala',
	'Utils.vala',
	'WelcomeButton.vala',
	'Welcome.vala',
	'widgets-utils.c',
	'widgets-utils.h'
])

inc_libwidgetsh = include_directories ('.')
inc_libwidgetsh_dep = declare_dependency (include_directories : inc_libwidgetsh)
